<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Run Tracker</string>
    <string name="settings">Settings</string>
    <string name="export_list_of_runs">Export list of runs</string>
    <string name="delete_db">Delete all runs</string>
    <string name="statistics">Statistics</string>
    <string name="stats">Stats</string>
    <string name="graph_it">Graph Runs</string>

</resources>
