<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/stats_icon"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/stats_icon"
        android:title="@string/stats"/>
      
    <item
        android:id="@+id/statistics"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/statistics"/>
    
    <item
        android:id="@+id/settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/export_list_of_runs"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/export_list_of_runs"/>
    
    <item
        android:id="@+id/delete_db"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/delete_db"/>

</menu>
